--- a/iD.css
+++ b/iD.css
@@ -437,12 +437,12 @@ path.fill.tag-landuse-residential {
 
 path.stroke.tag-landuse-retail,
 path.stroke.tag-landuse-commercial,
-path.stroke.tag-building-commerial {
+path.stroke.tag-building-commercial {
     stroke: rgb(234, 176, 86);
 }
 path.fill.tag-landuse-retail,
 path.fill.tag-landuse-commercial,
-path.fill.tag-building-commerial {
+path.fill.tag-building-commercial {
     fill: rgba(234, 176, 86, 0.1);
 }
 .preset-icon-fill-area.tag-landuse-retail,
@@ -836,15 +836,13 @@ path.casing.tag-aeroway-runway {
     stroke-linecap: square;
 }
 path.fill.tag-aeroway-runway {
-    fill: #000;
-    fill-opacity: 0.6;
+    fill: rgba(0, 0, 0, 0.6);
 }
 path.stroke.tag-aeroway-apron {
     stroke: #805C80;
 }
 path.fill.tag-aeroway-apron {
-    fill: #805C80;
-    fill-opacity: 0.2;
+    fill: rgba(128, 92, 128, 0.2);
 }
 
 
@@ -950,7 +948,7 @@ path.casing.tag-highway-construction {
 /* waterways */
 
 path.fill.tag-waterway {
-    fill: #77d3de;
+    fill: rgba(119, 211, 222, 0.3);
 }
 
 path.stroke.tag-waterway {
