--- a/iD.css
+++ b/iD.css
@@ -424,40 +424,51 @@ path.fill.tag-leisure-park {
     background-color: rgba(140, 208, 95, 0.2);
 }
 
+path.fill.tag-landuse-residential,
+path.fill.tag-landuse-retail,
+path.fill.tag-landuse-commercial,
+path.fill.tag-landuse-industrial {
+    fill: none;
+    stroke-width: 60px;
+}
+
 path.stroke.tag-landuse-residential {
-    stroke: rgb(224, 110, 95);
+    stroke: rgb(196, 189, 25);
 }
 path.fill.tag-landuse-residential {
-    fill: rgba(224, 110, 95, 0.1);
+    stroke: rgba(196, 189, 25, 0.3);
 }
 .preset-icon-fill-area.tag-landuse-residential {
-    border-color: rgb(224, 110, 95);
-    background-color: rgba(224, 110, 95, 0.1);
+    border-color: rgb(196, 189, 25);
+    background: none;
+    box-shadow: inset 0 0 0 5px rgba(196, 189, 25, 0.3);
 }
 
 path.stroke.tag-landuse-retail,
 path.stroke.tag-landuse-commercial {
-    stroke: rgb(234, 176, 86);
+    stroke: rgb(214, 136, 26);
 }
 path.fill.tag-landuse-retail,
 path.fill.tag-landuse-commercial {
-    fill: rgba(234, 176, 86, 0.1);
+    stroke: rgba(214, 136, 26, 0.3);
 }
 .preset-icon-fill-area.tag-landuse-retail,
 .preset-icon-fill-area.tag-landuse-commercial {
-    border-color: rgb(234, 176, 86);
-    background-color: rgba(234, 176, 86, 0.1);
+    border-color: rgb(214, 136, 26);
+    background: none;
+    box-shadow: inset 0 0 0 5px rgba(214, 136, 26, 0.3);
 }
 
 path.stroke.tag-landuse-industrial {
     stroke: rgb(228, 164, 245);
 }
 path.fill.tag-landuse-industrial {
-    fill: rgba(228, 164, 245, 0.1);
+    stroke: rgba(228, 164, 245, 0.3);
 }
 .preset-icon-fill-area.tag-landuse-industrial {
     border-color: rgb(228, 164, 245);
-    background-color: rgba(228, 164, 245, 0.1);
+    background: none;
+    box-shadow: inset 0 0 0 5px rgba(228, 164, 245, 0.3);
 }
 
 path.stroke.tag-landuse-basin,
@@ -497,22 +508,22 @@ path.fill.tag-landuse-landfill {
 }
 
 path.stroke.tag-landuse-construction {
-    stroke: rgb(224, 110, 95);
+    stroke: rgb(196, 189, 25);
 }
 .pattern-color-construction {
-    fill: rgba(224, 110, 95, 0.2);
+    fill: rgba(196, 189, 25, 0.2);
 }
 .preset-icon-fill-area.tag-landuse-construction {
-    border-color: rgb(224, 110, 95);
-    background-color: rgba(224, 110, 95, 0.2);
+    border-color: rgb(196, 189, 25);
+    background-color: rgba(196, 189, 25, 0.2);
 }
 
 path.stroke.tag-landuse-military {
-    stroke: rgb(224, 110, 95);
+    stroke: rgb(214, 136, 26);
 }
 .preset-icon-fill-area.tag-landuse-military {
-    border-color: rgb(224, 110, 95);
-    background-color: rgba(224, 110, 95, 0.2);
+    border-color: rgb(214, 136, 26);
+    background-color: rgba(214, 136, 26, 0.2);
 }
 
 path.stroke.tag-natural-wetland {
