--- a/iD.css
+++ b/iD.css
@@ -373,26 +373,27 @@ path.fill.tag-natural-water {
     background-color: rgba(119, 211, 222, 0.3);
 }
 
-path.stroke.tag-amenity-school {
-    stroke: rgb(255, 255, 148);
-}
-path.fill.tag-amenity-school {
-    fill: rgba(255, 255, 148, 0.2);
-}
-.preset-icon-fill-area.tag-amenity-school {
-    border-color: rgb(255, 255, 148);
-    background-color: rgba(255, 255, 148, 0.2);
-}
-
+path.stroke.tag-amenity-childcare,
+path.stroke.tag-amenity-kindergarten,
+path.stroke.tag-amenity-school,
+path.stroke.tag-amenity-college,
 path.stroke.tag-amenity-university {
     stroke: rgb(255, 255, 148);
 }
+path.fill.tag-amenity-childcare,
+path.fill.tag-amenity-kindergarten,
+path.fill.tag-amenity-school,
+path.fill.tag-amenity-college,
 path.fill.tag-amenity-university {
-    fill: rgba(255, 255, 148, 0.1);
+    fill: rgba(255, 255, 148, 0.15);
 }
+.preset-icon-fill-area.tag-amenity-childcare,
+.preset-icon-fill-area.tag-amenity-kindergarten,
+.preset-icon-fill-area.tag-amenity-school,
+.preset-icon-fill-area.tag-amenity-college,
 .preset-icon-fill-area.tag-amenity-university {
     border-color: rgb(255, 255, 148);
-    background-color: rgba(255, 255, 148, 0.1);
+    background-color: rgba(255, 255, 148, 0.15);
 }
 
 path.stroke.tag-landuse,
@@ -1302,6 +1303,36 @@ text.gpx {
     fill:#FF26D4;
 }
 
+/* Mapillary Layer */
+
+.layer-mapillary {
+    pointer-events: none;
+}
+
+.layer-mapillary g {
+    pointer-events: visible;
+    cursor: pointer; /* Opera */
+    cursor: url(img/cursor-select-mapillary.png) 6 1, pointer; /* FF */
+}
+
+.layer-mapillary g * {
+    stroke-width: 2;
+    stroke: #ffc600;
+    fill: #ffc600;
+}
+
+.layer-mapillary g:hover * {
+    stroke-width: 2;
+    stroke: #ff9900;
+    fill: #ff9900;
+}
+
+.layer-mapillary g.selected * {
+    stroke-width: 4;
+    stroke: #ff5800;
+    fill: #ff5800;
+}
+
 /* Modes */
 
 .mode-draw-line .vertex.active,
@@ -1666,6 +1697,7 @@ a.hide {
     height:100%;
     right: -100%;
 }
+
 
 .pane {
     position:absolute;
@@ -2041,6 +2073,48 @@ a:hover .icon.out-link   { background-position: -500px -14px;}
     right: 0;
     left: 0;
     bottom: 0;
+}
+
+.mapillary-image {
+    position: absolute;
+    right: 0;
+    bottom: 30px;
+    width: 330px;
+    height: 250px;
+    padding: 5px;
+    background-color: #fff;
+}
+
+.mapillary-image a {
+    display: block;
+    position: absolute;
+    height: auto;
+    background-color: rgba(0,0,0,.5);
+    bottom: 0;
+    right: 0;
+    padding: 5px 10px;
+}
+
+.mapillary-image img {
+    width: 100%;
+    height: auto;
+    display: block;
+}
+
+.mapillary-image.hidden {
+    visibility: hidden;
+}
+
+.mapillary-image.temp button {
+    display: none;
+}
+
+.mapillary-image button {
+    border-radius: 0;
+    padding: 5px;
+    position: absolute;
+    right: 0;
+    top: 0;
 }
 
 .feature-list-pane .inspector-body {
@@ -4382,6 +4456,8 @@ img.wiki-image {
 .feature-chemist{background-position:-54px -528px;}
 .feature-mobilephone{background-position:-108px -528px;}
 .feature-scooter{background-position:-162px -528px;}
+.feature-gift{background-position:-216px -528px;}
+.feature-ice-cream{background-position:-0px -552px;}
 .preset-icon-line.feature-highway-motorway{background-position:-20px -25px;}
 .preset-icon-line.feature-highway-trunk{background-position:-80px -25px;}
 .preset-icon-line.feature-highway-primary{background-position:-140px -25px;}
